@@ -2,6 +2,8 @@
 
 	* spvw_debug.d (nobject_out1): handle PPHELP-STREAMs
 	(TheStream, Car, Cdr): new trivial accessors
+	* io.d: removed the debugging infrastructure,
+	nobject_out() is now quite sufficient
 
 2004-03-25  Sam Steingold  <sds@gnu.org>
 
